<resources>
    <string name="app_name">TaskBookProyecto</string>
    <string name="contraseña">Ingrese Contraseña:</string>
    <string name="correo">Ingrese Correo:</string>
    <string name="registrar">REGISTRAR USUARIO</string>
    <string name="iniciar">INICIAR SESIÓN</string>
    <string name="invitado">ENTRAR COMO INVITADO</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>