<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/PantallaPrincipal">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.taskbookproyecto.ui.home.TareasFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.taskbookproyecto.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.taskbookproyecto.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/actividades"
        android:name="com.example.taskbookproyecto.Actividades"
        android:label="Lista de Actividades"
        tools:layout="@layout/fragment_actividades" />
    <fragment
        android:id="@+id/miPerfil"
        android:name="com.example.taskbookproyecto.MiPerfilFragment"
        android:label="Perfil de Usuario"
        tools:layout="@layout/fragment_mi_perfil" />

    <fragment
        android:id="@+id/PantallaPrincipal"
        android:name="com.example.taskbookproyecto.ui.PantallaPrincipalFragment"
        android:label="Pantalla Principal"
        tools:layout="@layout/fragment_pantalla_principal" />
</navigation>